# papermind

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  main.py  pyproject.toml
app/: api.py  embedder.py  llm.py  model.py
app/embedder/: embedder.py
app/ingestion/: __init__.py  ingest.py  ingest_pdf.py  ingestion_pipeline.py
app/model/: chunk.py
app/retrieval/: prompt.py  retrieval_pipeline.py  retrieved_chunk.py
app/store/: chroma_db.py
config/: prod.yaml  test.yaml
tests/: test_api.py  test_chroma_db.py  test_ingest_pdf.py  test_integration.py  test_prompt.py
