[project]
name = "papermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "docling>=2.75.0",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.4",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[tool.ruff]
# Enable specific rules (Pyflakes, Pycodestyle, Isort)
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
# Automatically fix what you can
fixable = ["ALL"]
