[project]
name = "papermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "docling>=2.75.0",
    "fastapi>=0.135.1",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.26",
    "requests>=2.32.5",
    "ruff>=0.15.4",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.2",
]

[tool.ruff]
# Enable specific rules (Pyflakes, Pycodestyle, Isort)
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
# Automatically fix what you can
fixable = ["ALL"]
