[project]
name = "papermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "docling>=2.90.0",
    "fastapi>=0.136.0",
    "google>=3.0.0",
    "google-genai>=1.73.1",
    "ollama>=0.6.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.2",
]

[tool.ruff]
# Enable specific rules (Pyflakes, Pycodestyle, Isort)
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
# Automatically fix what you can
fixable = ["ALL"]
